# eks_way_ai

./: CMakeLists.txt  input  main.cpp
inputs/: input.txt  input1.txt  input2.txt  input3.txt
source/: abstract_debuger_t.cpp  abstract_debuger_t.h  abstract_simplex_task_t.cpp  abstract_simplex_task_t.h  linear_cut_debuger_t.cpp  linear_cut_debuger_t.h  linear_cut_simplex_method_t.cpp  linear_cut_simplex_method_t.h  linear_cut_task_t.cpp  linear_cut_task_t.h  simplex_definitions.h  simplex_method_equality_t.cpp  simplex_method_equality_t.h  simplex_method_t.cpp  simplex_method_t.h  simplex_method_unequality_t.cpp  simplex_method_unequality_t.h  simplex_task_t.cpp  simplex_task_t.h
source/intefrace/: pattern_item.cpp  pattern_item.h  table_widget.cpp  table_widget.h  view.cpp  view.h  window_cut.cpp  window_cut.h
